@@ -9,6 +9,8 @@ Revision history for DBIx::Class
           http://lists.scsys.co.uk/pipermail/dbix-class/2013-June/011374.html)
         - Fix multiple edge cases steming from interaction of a non-selecting
           order_by specification and distinct and/or complex prefetch
+        - Clarify ambiguous behavior of distinct when used with ResultSetColumn
+          i.e. $rs->search({}, { distinct => 1 })->get_column (...)
         - Setting quote_names propagates to SQL::Translator when producing
           SQLite DDL (it is one of the few producers *NOT* quoting by default)
         - Fix incorrect binding of large integers on old versions of
